--- a/index.html
+++ b/index.html
@@ -22,7 +22,10 @@
             </ul>
         </div>
     </header>
-    <main></main>
+    <main>
+        <div class="conteudo"></div>
+        <div class="destaque"></div>
+    </main>
     <footer></footer>    
 </body>
 </html>
