--- a/index.html
+++ b/index.html
@@ -32,13 +32,15 @@
                 </button>
             </div>
             <div class="social">
-                <div class=""></div>
-                <div class=""></div>
-                <div class=""></div>
+                <div></div>
+                <div></div>
+                <div></div>
             </div>
         </div>
         <div class="destaque"></div>
     </main>
-    <footer></footer>    
+    <footer>
+        Vitor Paes Rodrigues
+    </footer>    
 </body>
 </html>
