--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./style.css">
-    <title>Layout</title>
+    <title>MB.04 LaFrancé - Publicidade</title>
 </head>
 <body>
     <header>
@@ -24,11 +24,11 @@
     </header>
     <main>
         <div class="conteudo">
-            <h1>Título focado no produto para divulgar</h1>
-            <p>Descreva de forma breve e direta o que é seu produto, para quem ele é o que torna ele tão especial</p>
+            <h1>MB.04 LaFrancé</h1>
+            <p>De boas vindas ao MB.04 LaFrancé, o novo calçado exclusivo de Lamelo Ball. O MB.04 é para os que querem levar seu estilo e jogo para a estratosfera. O design exclusivo do MB.04 é envolto em tentáculos alienígenas com frases de Melo escondidas por toda parte. Esta versão LaFrancé em azul claro apresenta uma parte superior em malha de dupla camada de suporte e tecnologia NITROFOAM™ para potência na quadra.</p>
             <div class="acao">
                 <button>
-                    <a href="#">Botão</a>
+                    <a href="https://mobile.puma.com/ca/en/pd/puma-x-lamelo-ball-mb-04-lafrancé-1-of-1-mens-basketball-shoes/310697">Ver mais</a>
                 </button>
             </div>
             <div class="social">
